--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,32 +1,34 @@
 services:
-  zookeeper:
-    image: zookeeper:3.9.2
-    container_name: zookeeper_3.9.2
+  zookeeper-0:
+    image: bitnami/zookeeper:3.9.2
+    container_name: zookeeper-0
     ports:
       - 2181:2181
-      - 2888:2888
-      - 3888:3888
-      - 8080:8080
-  kafka:
-    image: apache/kafka:3.7.0
-    depends_on:
-      - zookeeper
-    container_name: kafka_3.7.0
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ALLOW_ANONYMOUS_LOGIN: yes
+
+  kafka-0:
+    image: bitnami/kafka:3.7.0
+    container_name: kafka-0
     ports:
-      - 9092:9092
-    volumes:
-      - /mnt/wsl/Ubuntu/root/apps/kafka-hello-world/config:/mnt/shared/config # 설정파일
-      - /mnt/wsl/Ubuntu/root/apps/kafka-hello-world/data:/tmp/kafka-logs # 데이터
-#  kafka-ui:
-#    image: provectuslabs/kafka-ui:v0.7.2
-#    container_name: kafka-ui_0.7.2
-#    depends_on:
-#      - kafka
-#    ports:
-#      - 8888:8080
-#    environment:
-#      DYNAMIC_CONFIG_ENABLED: true
-#      KAFKA_CLUSTERS_0_NAME: any_name
-#      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9092
-#      KAFKA_CLUSTERS_0_ZOOKEEPER: zookeeper:2181
-#      KAFKA_BROKERCONNECT: kafka:9092
+      - 9094:9094
+    environment:
+      ALLOW_PLAINTEXT_LISTENER: yes
+      KAFKA_ENABLE_KRAFT: no
+      KAFKA_CFG_ZOOKEEPER_CONNECT: zookeeper-0:2181
+      KAFKA_CFG_LISTENERS: PLAINTEXT://:9092,EXTERNAL://:9094
+      KAFKA_CFG_ADVERTISED_LISTENERS: PLAINTEXT://kafka-0:9092,EXTERNAL://localhost:9094
+      KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT,PLAINTEXT:PLAINTEXT
+
+  kafka-ui:
+    image: provectuslabs/kafka-ui:v0.7.2
+    container_name: kafka-ui
+    depends_on:
+      - kafka-0
+    ports:
+      - 8080:8080
+    environment:
+      DYNAMIC_CONFIG_ENABLED: true
+      KAFKA_CLUSTERS_0_NAME: local
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka-0:9092
